[gd_scene load_steps=16 format=3 uid="uid://vyddl3k5288n"]

[ext_resource type="PackedScene" uid="uid://dgafs4wvs6qor" path="res://collision/hitbox.tscn" id="1_32sn4"]
[ext_resource type="Script" path="res://player/player.gd" id="1_lrvit"]
[ext_resource type="Texture2D" uid="uid://bw6dk6tvimmgw" path="res://textures/player/player.png" id="3_0ubwu"]
[ext_resource type="Texture2D" uid="uid://dl7mqflrhvii3" path="res://textures/player/player color.png" id="4_ai0qx"]
[ext_resource type="Texture2D" uid="uid://cnk21hjnyq1wd" path="res://textures/particles/l gray.png" id="5_5a2xt"]
[ext_resource type="AudioStream" uid="uid://4e08pnrfkemk" path="res://sounds/effects/hit yrslf sound.mp3" id="6_qb2wq"]
[ext_resource type="AudioStream" uid="uid://cpgch2fl40vo7" path="res://sounds/shooting/player.mp3" id="7_1ryby"]

[sub_resource type="Gradient" id="Gradient_wnija"]
interpolation_mode = 2
colors = PackedColorArray(0, 1, 1, 0.188235, 1, 1, 1, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_okbxx"]
radius = 8.0
height = 32.0

[sub_resource type="Curve" id="Curve_mqwv1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.746988, 0.481818), 0.0, 0.0, 0, 0, Vector2(0.987952, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_or1vh"]
curve = SubResource("Curve_mqwv1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pu73j"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_or1vh")

[sub_resource type="Animation" id="Animation_pry6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shield:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mg8fh"]
resource_name = "shield"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shield:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 1, 1, 0.501961), Color(0, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_na1mx"]
_data = {
"RESET": SubResource("Animation_pry6o"),
"shield": SubResource("Animation_mg8fh")
}

[node name="player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_lrvit")

[node name="scope" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 2240, 0)
width = 1.0
default_color = Color(0, 1, 1, 1)
gradient = SubResource("Gradient_wnija")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_okbxx")

[node name="hitbox" parent="." instance=ExtResource("1_32sn4")]
collision_layer = 1
collision_mask = 8

[node name="CollisionPolygon2D" parent="hitbox" index="0"]
polygon = PackedVector2Array(-8, 7, -8, -7, -2, -2, 9, -2, 11, 0, 9, 2, -2, 2)

[node name="Player" type="Sprite2D" parent="."]
texture = ExtResource("3_0ubwu")

[node name="PlayerColor" type="Sprite2D" parent="."]
modulate = Color(0.392157, 0.392157, 0.392157, 1)
texture = ExtResource("4_ai0qx")

[node name="regeneration" type="Timer" parent="."]
autostart = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-8, 0)
amount = 32
process_material = SubResource("ParticleProcessMaterial_pu73j")
texture = ExtResource("5_5a2xt")
lifetime = 0.2

[node name="hit sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qb2wq")

[node name="shoot sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1ryby")
volume_db = 5.0

[node name="shield" type="Polygon2D" parent="."]
color = Color(0, 1, 1, 0)
polygon = PackedVector2Array(-10, 9, -5, 9, 0, 4, 10, 4, 13, 2, 13, -2, 10, -4, 0, -4, -6, -9, -10, -9, -10, -6, -12, -6, -13, -5, -13, -3, -12, -2, -10, -2, -10, 2, -12, 2, -13, 3, -13, 5, -12, 6, -10, 6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_na1mx")
}

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="regeneration" to="." method="_on_regeneration_timeout"]

[editable path="hitbox"]
